# excel_cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md
crates/excel-cli/: Cargo.toml
crates/excel-cli/src/: builder.rs  config.rs  dispatch.rs  main.rs
crates/excel-cli/src/helpers/: convert.rs  diff.rs  mod.rs  summarize.rs  validate.rs
crates/excel-core/: Cargo.toml
crates/excel-core/src/: lib.rs
crates/excel-core/src/models/: error.rs  mod.rs  range.rs  sheet.rs  style.rs  table.rs  workbook.rs
crates/excel-core/src/output/: csv.rs  json.rs  mod.rs  table.rs
crates/excel-core/src/registry/: calc.rs  chart.rs  conditional.rs  connection.rs  export.rs  file.rs  format.rs  formula.rs  mod.rs  named_range.rs  pivot.rs  range.rs  sheet.rs  slicer.rs  table.rs
crates/excel-core/src/services/: mod.rs
crates/excel-core/src/services/graph/: auth.rs  mod.rs
crates/excel-core/src/services/local/: calamine_read.rs  conditional.rs  export.rs  file.rs  format.rs  formula.rs  mod.rs  named_range.rs  range.rs  safe_io.rs  sheet.rs  table.rs  tests.rs
orchestrator/: .env.example  main.py  mcp_config.example.json  mcp_server.py  requirements.txt  tools.py  web.py
orchestrator/harness/: __init__.py  context.py  engine.py  hooks.py  runtime.py  skills.py  tools.py
orchestrator/plugins/: __init__.py  base.py
orchestrator/providers/: __init__.py  gemini.py  openai.py
orchestrator/templates/: index.html
skills/excel-analyze/: skill.md
skills/excel-auth/: skill.md
skills/excel-convert/: skill.md
skills/excel-create/: skill.md
(+17 files in other folders)
