[package]
name = "excel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for Excel file manipulation, inspired by gws"

[[bin]]
name = "excel-cli"
path = "src/main.rs"

[dependencies]
excel-core = { path = "../excel-core" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
comfy-table = "7"
colored = "2"
dirs = "5"
toml = "0.8"
indicatif = "0.17"
